@@ -1,9 +1,12 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.8.3
 Date: 20. 12. 2017
+  Added:
+    - Map colours for all the painted concrete variants
   Changed:
     - Adjusted concrete layering to allow grid concrete and normal concrete to merge nicely
     - Updated grid concrete map colour to differentiate it from normal concrete
+    - Adjusted icons for gravel items
   Bugfixes:
     - Fixed issue with grid concrete when high resolution graphics are active
 ---------------------------------------------------------------------------------------------------
